--- a/index.html
+++ b/index.html
@@ -1,97 +1,118 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titulo</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
 
 </head>
 <body>
+    <header class="yellow">
     <img src="logo-mercado-liebre.svg" alt="" width="100%">
-    <header>
-    <p>Lugar para poner barra de busqueda</p>
-    <p>Compra en cuotas y sin tarjetas de credito</p>
-    <nav><ul>
+    <p class="parrafos">Lugar para poner barra de busqueda</p>
+    <p class="parrafos">Compra en cuotas y sin tarjetas de credito</p>
+    <nav><ul class="parrafos">
         <li><a href="#">Ofertas</a></li>
         <li><a href="#">Tiendas Oficiales</a></li>
         <li><a href="#">Vender</a></li>
         <li><a href="#">Ayuda</a></li>
     </ul></nav>
-    <nav><ul>
+    <section>
+        <ul class="parrafos">
         <li><a href="#">Crea tu cuenta</a></li>
         <li><a href="#">Ingresá</a></li>
         <li><a href="#">Mis compras</a></li>
     </ul>
-    </nav>
+    </section>
 </header>
-    <nav><img src="img-home-banner.jpg" alt="banner" width="95%"></nav>
+    <section><img src="img-home-banner.jpg" alt="banner" width="95%"></section>
     <div>
-        <strong><p>Basado en tu última visita</p></strong>
+        <strong><p class="titulares">Basado en tu última visita</p></strong>
     </div>
-    <nav>
+    <section>
         <img src="img-cafetera-moulinex.jpg" alt="cafetera" width="100%">
-        <p>$6.770</p>
-        <p>40% off</p>
-        <strong><p>Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</p></strong>
-    </nav>
-    <nav>
+        <i class="fas fa-truck"></i>
+        <p class="precio">$6.770</p>
+        <p class="desc">40% off</p>
+        <p class="descrip">Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</p>
+        <article class="gris"> </article>
+    </section>
+    <div class="gris"> </div>
+    <section>
         <img src="img-macbook-pro-2019.jpg" alt="Macbook" width="100%">
-        <p>$230.000</p>
-        <p>20% off</p>
-        <strong><p>Macbook Pro 2019 Lorem ipsum, dolor sit amet.</p></strong>
-    </nav>
-    <nav>
+        <i class="fas fa-truck"></i>
+        <p class="precio">$230.000</p>
+        <p class="desc">20% off</p>
+        <p class="descrip">Macbook Pro 2019 Lorem ipsum, dolor sit amet.</p>
+        <div class="gris">.</div>
+    </section>
+    <section>
         <img src="img-samsung-galaxy-s10.jpg" alt="telefono" width="100%">
-        <p>$70.500</p>
-        <p>15% off</p>
-        <strong><p>Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.</p></strong>   
-    </nav>
-    <nav>
+        <i class="fas fa-truck"></i>
+        <p class="precio">$70.500</p>
+        <p class="desc">15% off</p>
+        <p class="descrip">Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.</p>
+        <div class="gris">.</div>
+    </section>
+    <section>
         <img src="img-tv-samsung-smart.jpg" alt="television" width="100%">
-        <p>$34.000</p>
-        <p>5% off</p>
-        <strong><p>SmartTv Samsung 43" Lorem ipsum, dolor sit amet.</p></strong>    
-    </nav>
+        <i class="fas fa-truck"></i>
+        <p class="precio">$34.000</p>
+        <p class="desc">5% off</p>
+        <p class="descrip">SmartTv Samsung 43" Lorem ipsum, dolor sit amet.</p>
+    </section>
     <div>
-        <strong><p>Ofertas</p></strong>
+        <strong><p class="titulares">Ofertas</p></strong>
     </div>
-    <nav>
+    <section>
         <img src="img-cafetera-moulinex.jpg" alt="cafetera" width="100%">
-        <p>$6.770</p>
-        <p>40% off</p>
-        <strong><p>Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</p></strong>
-    </nav>
-    <nav>
+        <i class="fas fa-truck"></i>
+        <p class="precio">$6.770</p>
+        <p class="desc">40% off</p>
+        <p class="descrip">Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</p>
+        <div class="gris">.</div>
+    </section>
+    <section>
         <img src="img-macbook-pro-2019.jpg" alt="Macbook" width="100%">
-        <p>$230.000</p>
-        <p>20% off</p>
-        <strong><p>Macbook Pro 2019 Lorem ipsum, dolor sit amet.</p></strong>
-    </nav>
-    <nav>
+        <i class="fas fa-truck"></i>
+        <p class="precio">$230.000</p>
+        <p class="desc">20% off</p>
+        <p class="descrip">Macbook Pro 2019 Lorem ipsum, dolor sit amet.</p>
+        <div class="gris">.</div>
+    </section>
+    <section>
         <img src="img-samsung-galaxy-s10.jpg" alt="telefono" width="100%">
-        <p>$70.500</p>
-        <p>15% off</p>
-        <strong><p>Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.</p></strong>   
-    </nav>
-    <nav>
+        <i class="fas fa-truck"></i>
+        <p class="precio">$70.500</p>
+        <p class="desc">15% off</p>
+        <p class="descrip">Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.</p>
+        <div class="gris">.</div>
+    </section>
+    <section>
         <img src="img-tv-samsung-smart.jpg" alt="television" width="100%">
-        <p>$34.000</p>
-        <p>5% off</p>
-        <strong><p>SmartTv Samsung 43" Lorem ipsum, dolor sit amet.</p></strong>    
-    </nav>
+        <i class="fas fa-truck"></i>
+        <p class="precio">$34.000</p>
+        <p class="desc">5% off</p>
+        <p class="descrip">SmartTv Samsung 43" Lorem ipsum, dolor sit amet.</p>
+    </section>
     <div>
+        <i class="fas fa-credit-card"></i>
         <strong><p>Pagá con tarjeta o en efectivo</p></strong>
         <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen puntos de
             pago. ¡Y siempre es seguro!</p>
     </div>
     <div>
+        <i class="fas fa-gift"></i>
         <strong><p>Envío gratis desde los $ 2.500</p></strong>
         <p>Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles de
             productos. Es un beneficio de MercadoPuntos.</p>
     </div>
     <div>
+        <i class="fas fa-user-shield"></i>
         <strong><p>Seguridad, de principio a fin</p></strong>
         <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer
             porque estás siempre prtegid@.</p>
