intentando la barra

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p class="precio">$6.770</p>
         <p class="desc">40% off</p>
         <p class="descrip">Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</p>
-        <article class="gris"> </article>
+        <div class="gris">.</div>
     </section>
     <div class="gris"> </div>
     <section>
