Modificando estructura html

--- a/index.html
+++ b/index.html
@@ -23,100 +23,104 @@
     </ul></nav>
     <section>
         <ul class="parrafos">
-        <li><a href="#">Crea tu cuenta</a></li>
-        <li><a href="#">Ingresá</a></li>
+        <li><a href="/register">Crea tu cuenta</a></li>
+        <li><a href="/login">Ingresá</a></li>
         <li><a href="#">Mis compras</a></li>
     </ul>
     </section>
 </header>
     <section><img src="img-home-banner.jpg" alt="banner" width="95%"></section>
-    <div>
-        <strong><p class="titulares">Basado en tu última visita</p></strong>
-    </div>
+    <main>
+        <div><strong><p class="titulares">Basado en tu última visita</p></strong></div>
     <section>
-        <img src="img-cafetera-moulinex.jpg" alt="cafetera" width="100%">
-        <i class="fas fa-truck"></i>
-        <p class="precio">$6.770</p>
-        <p class="desc">40% off</p>
-        <p class="descrip">Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</p>
-        <div class="gris">.</div>
-    </section>
+        <article>
+            <img src="img-cafetera-moulinex.jpg" alt="cafetera" width="100%">
+            <i class="fas fa-truck"></i>
+            <p class="precio">$6.770</p>
+            <p class="desc">40% off</p>
+            <p class="descrip">Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</p>
+            <div class="gris">.</div>
+        </article>
     <div class="gris"> </div>
-    <section>
+    <article>
         <img src="img-macbook-pro-2019.jpg" alt="Macbook" width="100%">
         <i class="fas fa-truck"></i>
         <p class="precio">$230.000</p>
         <p class="desc">20% off</p>
         <p class="descrip">Macbook Pro 2019 Lorem ipsum, dolor sit amet.</p>
         <div class="gris">.</div>
-    </section>
-    <section>
+    </article>
+    <article>
         <img src="img-samsung-galaxy-s10.jpg" alt="telefono" width="100%">
         <i class="fas fa-truck"></i>
         <p class="precio">$70.500</p>
         <p class="desc">15% off</p>
         <p class="descrip">Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.</p>
         <div class="gris">.</div>
-    </section>
-    <section>
+    </article>
+    <article>
         <img src="img-tv-samsung-smart.jpg" alt="television" width="100%">
         <i class="fas fa-truck"></i>
         <p class="precio">$34.000</p>
         <p class="desc">5% off</p>
         <p class="descrip">SmartTv Samsung 43" Lorem ipsum, dolor sit amet.</p>
-    </section>
-    <div>
-        <strong><p class="titulares">Ofertas</p></strong>
-    </div>
-    <section>
-        <img src="img-cafetera-moulinex.jpg" alt="cafetera" width="100%">
-        <i class="fas fa-truck"></i>
-        <p class="precio">$6.770</p>
-        <p class="desc">40% off</p>
-        <p class="descrip">Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</p>
-        <div class="gris">.</div>
-    </section>
-    <section>
-        <img src="img-macbook-pro-2019.jpg" alt="Macbook" width="100%">
-        <i class="fas fa-truck"></i>
-        <p class="precio">$230.000</p>
-        <p class="desc">20% off</p>
-        <p class="descrip">Macbook Pro 2019 Lorem ipsum, dolor sit amet.</p>
-        <div class="gris">.</div>
-    </section>
-    <section>
-        <img src="img-samsung-galaxy-s10.jpg" alt="telefono" width="100%">
-        <i class="fas fa-truck"></i>
-        <p class="precio">$70.500</p>
-        <p class="desc">15% off</p>
-        <p class="descrip">Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.</p>
-        <div class="gris">.</div>
-    </section>
-    <section>
-        <img src="img-tv-samsung-smart.jpg" alt="television" width="100%">
-        <i class="fas fa-truck"></i>
-        <p class="precio">$34.000</p>
-        <p class="desc">5% off</p>
-        <p class="descrip">SmartTv Samsung 43" Lorem ipsum, dolor sit amet.</p>
-    </section>
-    <div>
-        <i class="fas fa-credit-card"></i>
-        <strong><p>Pagá con tarjeta o en efectivo</p></strong>
-        <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen puntos de
-            pago. ¡Y siempre es seguro!</p>
-    </div>
-    <div>
-        <i class="fas fa-gift"></i>
-        <strong><p>Envío gratis desde los $ 2.500</p></strong>
-        <p>Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles de
-            productos. Es un beneficio de MercadoPuntos.</p>
-    </div>
-    <div>
-        <i class="fas fa-user-shield"></i>
-        <strong><p>Seguridad, de principio a fin</p></strong>
-        <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer
-            porque estás siempre prtegid@.</p>
-    </div>
-    <footer>Copyright © 1999-2019 MercadoLiebre S.R.L.</footer>
+    </article>
+        </section>
+        <section>
+            <div><strong><p class="titulares">Ofertas</p></strong></div>
+            <article>
+                <img src="img-cafetera-moulinex.jpg" alt="cafetera" width="100%">
+                <i class="fas fa-truck"></i>
+                <p class="precio">$6.770</p>
+                <p class="desc">40% off</p>
+                <p class="descrip">Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</p>
+                <div class="gris">.</div>
+            </article>
+            <article>
+                <img src="img-macbook-pro-2019.jpg" alt="Macbook" width="100%">
+                <i class="fas fa-truck"></i>
+                <p class="precio">$230.000</p>
+                <p class="desc">20% off</p>
+                <p class="descrip">Macbook Pro 2019 Lorem ipsum, dolor sit amet.</p>
+                <div class="gris">.</div>
+            </article>
+            <article>
+                <img src="img-samsung-galaxy-s10.jpg" alt="telefono" width="100%">
+                <i class="fas fa-truck"></i>
+                <p class="precio">$70.500</p>
+                <p class="desc">15% off</p>
+                <p class="descrip">Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.</p>
+                <div class="gris">.</div>
+            </article>
+            <article>
+                <img src="img-tv-samsung-smart.jpg" alt="television" width="100%">
+                <i class="fas fa-truck"></i>
+                <p class="precio">$34.000</p>
+                <p class="desc">5% off</p>
+                <p class="descrip">SmartTv Samsung 43" Lorem ipsum, dolor sit amet.</p>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <article>
+            <i class="fas fa-credit-card"></i>
+            <strong><p>Pagá con tarjeta o en efectivo</p></strong>
+            <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen puntos de
+                pago. ¡Y siempre es seguro!</p>
+        </article>
+        <article>
+            <i class="fas fa-gift"></i>
+            <strong><p>Envío gratis desde los $ 2.500</p></strong>
+            <p>Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles de
+                productos. Es un beneficio de MercadoPuntos.</p>
+        </article>
+        <article>
+            <i class="fas fa-user-shield"></i>
+            <strong><p>Seguridad, de principio a fin</p></strong>
+            <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer
+                porque estás siempre prtegid@.</p>
+        </article>
+        <div>Copyright © 1999-2019 MercadoLiebre S.R.L.</div>
+    </footer>
 </body>
 </html>
